--- a/index.html
+++ b/index.html
@@ -9,18 +9,21 @@
     body {
         font-family: 'Hack Nerd Font', monospace;
         text-align: center;
-        background-color: #282828;
         color: #ebdbb2; /* Gruvbox foreground color */
         height: 100vh;
         display: flex;
         flex-direction: column;
         justify-content: flex-start; /* Align items to the top */
         align-items: center;
-        padding-top: 20px; /* Add padding to the top */
+        background-image: url('https://cdn.discordapp.com/attachments/986267698545721406/1233359385523130449/houseonthesideofalake.jpg?ex=662ccef0&is=662b7d70&hm=b82ba83f884cf8bddb88202a9ccb11698cbd3bbc34f630acf58cd1227721980d&');
+        background-size: cover;
     }
-
+    
     #clock {
         font-size: 48px;
+        background-color: rgba(0, 0, 0, 0.5);
+        padding: 10px;
+        border-radius: 10px;
     }
 
     #search-bar {
