--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha384-3AfBQssnYmUU4I2ZNW1iduy7crXTZGR9Evx3JNQ8MkZKzPnHk4JpKsGLWZq0pMde" crossorigin="anonymous">
 <style>
     body {
-        font-family: 'Hack Nerd Font', monospace;
+        font-family: -apple-system, BlinkMacSystemFont, 'San Francisco', 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Hack Nerd Font', monospace;
         text-align: center;
         color: #ebdbb2; /* Gruvbox foreground color */
         height: 100vh;
@@ -15,15 +15,13 @@
         flex-direction: column;
         justify-content: flex-start; /* Align items to the top */
         align-items: center;
-        background-image: url('https://cdn.discordapp.com/attachments/986267698545721406/1233359385523130449/houseonthesideofalake.jpg?ex=662ccef0&is=662b7d70&hm=b82ba83f884cf8bddb88202a9ccb11698cbd3bbc34f630acf58cd1227721980d&');
+        padding-top: 20px; /* Add padding to the top */
+        background-image: url('https://i.ibb.co/kXCMTL2/houseonthesideofalake.jpg');
         background-size: cover;
     }
     
     #clock {
         font-size: 48px;
-        background-color: rgba(0, 0, 0, 0.5);
-        padding: 10px;
-        border-radius: 10px;
     }
 
     #search-bar {
@@ -36,7 +34,7 @@
         color: #ebdbb2; /* Gruvbox foreground color */
         padding: 5px;
         box-sizing: border-box;
-        font-family: 'Hack Nerd Font', monospace;
+        font-family: -apple-system, BlinkMacSystemFont, 'San Francisco', 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Hack Nerd Font', monospace;
         font-size: 16px;
     }
 
